--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 Hello there, awesome person!
 <html>
-  
+  <head>
+    <title> my life story </title>
+  </head>
   <body>
     hello there, awsome person!
     
