--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@ Hello there, awesome person!
     <title> my life story </title>
   </head>
   <body>
+    <ol>
+      <li> this </li>
+      <li> is </li>
+      <li> an </li>
+      <li> ordered </li>
+      <li> list </li>
+    </ol>
     <img src= "http://avatars.githubusercontent.com/u/83594587?v=4">
     hello there, awsome person!
     <h1> here whats up in the world since 2020 </h1>
