--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Hello there, awesome person!
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title> my life story </title>
   </head>
   <body>
